base_overlays_file_structure/overlays/staging-azure/security/pod-security.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cptm8-staging
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
